<resources>
    <string name="app_name">Final Currency Converter</string>
    <string name="rupee">Rupee(Rs)</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="pound">Pound</string>
    <string name="dollar">AUD</string>
    <string name="amazing_20_2">Amazing (20%)</string>
    <string name="converted_currency">Converted Currency : %s</string>
    <string name="convert">Convert</string>
    <string name="main_money_input">Enter Money</string>
    <string name="choose_the_currency">Choose the Currency!!!</string>
    <string name="label">label</string>
    <string name="round_up_money">Round up Money?</string>
</resources>